# KalaFont

./: CMakeLists.txt  README.md
_external_shared/FreeType/include/: ft2build.h
_external_shared/FreeType/include/freetype/: freetype.h  fterrors.h  fttypes.h
_external_shared/FreeType/include/freetype/config/: ftconfig.h  ftheader.h  ftoption.h
_external_shared/KalaCLI/include/: command.hpp  core.hpp
_external_shared/KalaHeaders/: import_ktf.hpp  math_utils.hpp
debug/: LICENSE.md  README.md
docs/: external_libraries.md
include/: command.hpp  core.hpp  export.hpp  parse.hpp  parse_otf.hpp  parse_ttf.hpp  parser.hpp
release/: README.md
src/: command.cpp  core.cpp  export.cpp  main.cpp  parse.cpp  parse_otf.cpp  parse_ttf.cpp  parser.cpp
test_fonts/: bw.kfont  new.ktf  test.kfd  test.ktf
